Various fixes, "accessToken" renaming, code cleanup.
